syntax = "proto3";

package yandex.cloud.priv.datasphere.v2.scheduler;

import "yandex/cloud/priv/datasphere/v2/lzy-zygote.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-task.proto";

option go_package = "datasphere";
option java_outer_classname = "ServantV2";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

service ServantApiV2 {
  rpc Configure (ConfigureRequest) returns (ConfigureResponse);
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);
  rpc Signal (SignalRequest) returns (SignalResponse);
  rpc Stop (StopRequest) returns (StopResponse);
}

// =========== Configure ==========
message ConfigureRequest {
  EnvSpec spec = 1;
}
message ConfigureResponse {}

// =========== Execute ============
message ExecuteRequest {
    TaskSpec spec = 1;
}
message ExecuteResponse {}

// ========== Signal =============
message SignalRequest {
  int32 signal = 1;
}
message SignalResponse {}

// ========== Stop ============
message StopRequest {}
message StopResponse {}
message SlotSpec {
  Slot slot = 1;
  string channelId = 2;
}
